[ADD] further changes

--- a/Handout/handout.bib
+++ b/Handout/handout.bib
@@ -516,3 +516,32 @@ title = {{Fragmentation trees reloaded}},
 volume = {8},
 year = {2016}
 }
+
+@article{Rost2016,
+author = {R{\"{o}}st, Hannes L and Sachsenberg, Timo and Aiche, Stephan and Bielow, Chris and Weisser, Hendrik and Aicheler, Fabian and Andreotti, Sandro and Ehrlich, Hans-christian and Gutenbrunner, Petra and Kenar, Erhan and Liang, Xiao and Nahnsen, Sven and Nilse, Lars and Pfeuffer, Julianus and Rosenberger, George and Rurik, Marc and Schmitt, Uwe and Veit, Johannes and Walzer, Mathias and Wojnar, David and Wolski, Witold E and Schilling, Oliver and Choudhary, Jyoti S and Malmstr{\"{o}}m, Lars and Aebersold, Ruedi and Reinert, Knut and Kohlbacher, Oliver},
+doi = {10.1038/nmeth.3959},
+file = {:Users/alka/Documents/work/paper/mendeleydesktop/R{\"{o}}st et al/R{\"{o}}st et al.{\_}2016{\_}OpenMS a flexible open-source software platform for mass spectrometry data analysis.pdf:pdf},
+issn = {1548-7091},
+journal = {Nat. Methods},
+month = {sep},
+number = {9},
+pages = {741--748},
+title = {{OpenMS: a flexible open-source software platform for mass spectrometry data analysis}},
+url = {http://www.nature.com/articles/nmeth.3959},
+volume = {13},
+year = {2016}
+}
+@article{Pfeuffer2017,
+abstract = {Background: In recent years, several mass spectrometry-based omics technologies emerged to investigate qualitative and quantitative changes within thousands of biologically active components such as proteins, lipids and metabolites. The research enabled through these methods potentially contributes to the diagnosis and pathophysiology of human diseases as well as to the clarification of structures and interactions between biomolecules.},
+author = {Pfeuffer, Julianus and Sachsenberg, Timo and Alka, Oliver and Walzer, Mathias and Fillbrunn, Alexander and Nilse, Lars and Schilling, Oliver and Reinert, Knut and Kohlbacher, Oliver},
+doi = {10.1016/j.jbiotec.2017.05.016},
+file = {:Users/alka/Documents/work/paper/mendeleydesktop/Pfeuffer et al/Pfeuffer et al.{\_}2017{\_}OpenMS - A platform for reproducible analysis of mass spectrometry data.pdf:pdf},
+issn = {18734863},
+journal = {J. Biotechnol.},
+keywords = {Analysis workflows,Mass spectrometry,Reproducible research,Software libraries,Tool collection},
+number = {February},
+pages = {142--148},
+title = {{OpenMS - A platform for reproducible analysis of mass spectrometry data}},
+volume = {261},
+year = {2017}
+}
