--- a/Handout/pyopenms.tex
+++ b/Handout/pyopenms.tex
@@ -60,7 +60,7 @@ Use your package manager apt-get or yum, where possible.
 \subsubsection{IDE}
 If you don't have python installed an  alternative is to use an IDE (integrated development environment) with Anaconda integration. Here, we recommend spyder (\url{https://www.spyder-ide.org/}). It comes with a Anaconda, which is a package and environment manager. Thus the IDE should be able to run a specific environment independent of your systems python installation. \\
 
-\noindent Please execute the installer for your respective platform located in \directory{pyopenms/spyder\_IDE/} and follow the installation instructions. \\
+\noindent Please execute the installer for your respective platform located in the respective directory for your platform and follow the installation instructions. \\
 
 \noindent After installation the ANACONDA Navigator should be available. Please start the application. To install pyopenms please choose the button "Environments" and click the play symbol of the base environment and "Open Terminal". \\
 
