--- a/Handout/openswath.tex
+++ b/Handout/openswath.tex
@@ -4,12 +4,12 @@
 \section{OpenSWATH}
 \subsection{Introduction}
 
-OpenSWATH~\cite{Rost2014fd} is a module of OpenMS that allows analysis of LC-MS/MS DIA (data independent acquisition) data using the approach described by Gillet \textit{et~al.}~\cite{Gillet2012Targeted}. The DIA approach described there uses 32 cycles to iterate through precursor ion windows from 400-426 Da to 1175-1201 Da and at each step acquires a complete, multiplexed fragment ion spectrum of all precursors present in that window. After 32 fragmentations (or 3.2 seconds), the cycle is restarted and the first window (400-426 Da) is fragmented again, thus delivering complete ``snapshots'' of all fragments of a specific window every 3.2 seconds.
+OpenSWATH~\cite{Rost2014fd} allows the analysis of LC-MS/MS DIA (data independent acquisition) data using the approach described by Gillet \textit{et~al.}~\cite{Gillet2012Targeted}. The DIA approach described there uses 32 cycles to iterate through precursor ion windows from 400-426 Da to 1175-1201 Da and at each step acquires a complete, multiplexed fragment ion spectrum of all precursors present in that window. After 32 fragmentations (or 3.2 seconds), the cycle is restarted and the first window (400-426 Da) is fragmented again, thus delivering complete ``snapshots'' of all fragments of a specific window every 3.2 seconds. \\
 
-The analysis approach described by Gillet et al. extracts ion traces of specific fragment ions from all MS2 spectra that have the same precursor isolation window, thus generating data that is very similar to SRM traces.
+\noindent The analysis approach described by Gillet et al. extracts ion traces of specific fragment ions from all MS2 spectra that have the same precursor isolation window, thus generating data that is very similar to SRM traces.
 
 \subsection{Installation of OpenSWATH}
-OpenSWATH has been fully integrated since OpenMS 1.10 \cite{Kohlbacher2007,Sturm2008,Bertsch2011OpenMS}).
+OpenSWATH has been fully integrated since OpenMS 1.10 \cite{Kohlbacher2007,Sturm2008,Bertsch2011OpenMS,Rost2016,Pfeuffer2017}).
 
 \subsection{Installation of mProphet}
 mProphet (\url{http://www.mprophet.org/}) \cite{Reiter2011MProphet} is available as standalone script in \directory{External\_Tools/mProphet/}. 
@@ -20,18 +20,18 @@ Please obtain a version for either Windows, Mac or Linux directly from CRAN. \\
 
 \subsection{Generating the Assay Library}
 \subsubsection{Generating TraML from transition lists}
-OpenSWATH requires the assay libraries to be supplied in the TraML format \cite{Deutsch2012TraMLA}. To enable manual editing of transition lists, the TOPP tool \OPENMSTOOL{ConvertTSVToTraML} is available that uses tab separated files as input. Example datasets are provided in \directory{OpenSWATH/assay/}. Please note that the transition lists need to be named \texttt{.csv} or \texttt{.tsv}.
+OpenSWATH requires an assay library to be supplied in the TraML format \cite{Deutsch2012TraMLA}. To enable manual editing of transition lists, the TOPP tool \OPENMSTOOL{TargetedFileConverter} is available that uses tab separated files as input. Example datasets are provided in \directory{OpenSWATH/assay/}. Please note that the transition lists need to be named \texttt{.tsv}.
 
-The header of the transition list contains the following variables (with example values in brackets):
+\noindent The header of the transition list contains the following variables (with example values in brackets):
 
 \begin{description}
   \item[Required Columns:]
   \item[\texttt{PrecursorMz}] \hfill \\
-  The mass-to-charge (m/z) of the precursor ion. (728.88)
+  The mass-to-charge (m/z) of the precursor ion. (924.539)
   \item[\texttt{ProductMz}] \hfill \\
-  The mass-to-charge (m/z) of the product or fragment ion. (924.539)
+  The mass-to-charge (m/z) of the product or fragment ion. (728.99)
    \item[\texttt{LibraryIntensity}] \hfill \\
-  The relative intensity of the transition. (3305.3)
+  The relative intensity of the transition. (0.74)
   \item[\texttt{NormalizedRetentionTime}] \hfill \\
   The \textbf{normalized} retention time (or iRT) \cite{Escher2012Using} of the peptide. (26.5)
   \newline
@@ -55,31 +55,32 @@ The header of the transition list contains the following variables (with example
   A \textbf{unique} identifier for the transition.\\
   (AQUA4SWATH\_HMLangeA\_ADSTGTLVITDPTR(UniMod:267)/2\_y8)
   \item[\texttt{Decoy}] \hfill \\
-  A binary value whether the transition is target or decoy (target:0, decoy:1). (0)
+  A binary value whether the transition is target or decoy. (target: 0, decoy: 1)
   \item[\texttt{PeptideGroupLabel}] \hfill \\
   Which label group the peptide belongs to. \\
   \item[\texttt{DetectingTransition}] \hfill \\
   Use transition for peak group detection. (1)\\
   \item[\texttt{IdentifyingTransition}] \hfill \\
-  Use transition for peptidoform inference using IPF. (1)\\
+  Use transition for peptidoform inference using IPF. (0)\\
   \item[\texttt{QuantifyingTransition}] \hfill \\
   Use transition to quantify peak group. (1)\\
 \end{description}
 
-\noindent For further instructions about generic transition list and assay library generation please see \url{http://openswath.org/en/latest/docs/generic.html}.
+\noindent For further instructions about generic transition list and assay library generation please see \url{http://openswath.org/en/latest/docs/generic.html}. \\
 \newline
-\noindent To convert transitions lists to TraML, use \OPENMSTOOL{ConvertTSVToTraML}:\\
+
+\noindent To convert transitions lists to TraML, use the \OPENMSTOOL{TargetedFileConverter}: \\
 
 \begin{description}
   \item[Linux or Mac] \hfill \\
     On the Terminal:
     \begin{lstlisting}
-  TargetedFileConverter -in OpenSWATH_SGS_AssayLibrary.tsv -out OpenSWATH_SGS_AssayLibrary.TraML
+  TargetedFileConverter -in OpenSWATH_SGS_AssayLibrary_woDecoy.tsv -out OpenSWATH_SGS_AssayLibrary_woDecoy.TraML
   \end{lstlisting}
   \item[Windows] \hfill \\
     On the TOPP command line:
     \begin{lstlisting}
-  TargetedFileConverter.exe -in OpenSWATH_SGS_AssayLibrary.tsv -out OpenSWATH_SGS_AssayLibrary.TraML
+  TargetedFileConverter.exe -in OpenSWATH_SGS_AssayLibrary_woDecoy.tsv -out OpenSWATH_SGS_AssayLibrary_woDecoy.TraML
   \end{lstlisting}
 \end{description}
 
@@ -90,12 +91,12 @@ In addition to the target assays, OpenSWATH further requires decoy assays in the
   \item[Linux or Mac] \hfill \\
     On the Terminal:
     \begin{lstlisting}
-  OpenSwathDecoyGenerator -in OpenSWATH_SGS_AssayLibrary.TraML -out OpenSWATH_SGS_AssayLibrary_with_Decoys.TraML -method shuffle
+  OpenSwathDecoyGenerator -in OpenSWATH_SGS_AssayLibrary_woDecoy.TraML -out OpenSWATH_SGS_AssayLibrary.TraML -method shuffle -switchKR false
   \end{lstlisting}
   \item[Windows] \hfill \\
     On the TOPP command line:
     \begin{lstlisting}
-  OpenSwathDecoyGenerator.exe -in OpenSWATH_SGS_AssayLibrary.TraML -out OpenSWATH_SGS_AssayLibrary_with_Decoys.TraML -method shuffle
+  OpenSwathDecoyGenerator.exe -in OpenSWATH_SGS_AssayLibrary.TraML -out OpenSWATH_SGS_AssayLibrary_with_Decoys.TraML -method shuffle -switchKR false
   \end{lstlisting}
 \end{description}
 
