--- a/Handout/pyopenms.tex
+++ b/Handout/pyopenms.tex
@@ -57,8 +57,8 @@ Use your package manager apt-get or yum, where possible.
     \end{lstlisting}
 \end{enumerate}
 
-\subsubsection{IDE}
-If you don't have python installed an  alternative is to use an IDE (integrated development environment) with Anaconda integration. Here, we recommend spyder (\url{https://www.spyder-ide.org/}). It comes with a Anaconda, which is a package and environment manager. Thus the IDE should be able to run a specific environment independent of your systems python installation. \\
+\subsubsection{IDE with Anaconda integration}
+If you don't have python installed or don't want to modify your native installation, another possibility is to use an IDE (integrated development environment) with Anaconda integration. Here, we recommend spyder (\url{https://www.spyder-ide.org/}). It comes with Anaconda, which is a package and environment manager. Thus the IDE should be able to run a specific environment independent of your systems python installation. \\
 
 \noindent Please execute the installer for your respective platform located in the respective directory for your platform and follow the installation instructions. \\
 
@@ -76,7 +76,7 @@ pip install -U pyopenms
 Instructions on how to build pyOpenMS can be found online (\url{https://pyopenms.readthedocs.io/en/release_2.4.0/build_from_source.html}).
 
 \subsection{Scripting with pyOpenMS}
-A big advantage of pyOpenMS are its scripting possibilities (beyond its application in tool development). Most of the OpenMS datastructure can be accessed using python (\url{https://abibuilder.informatik.uni-tuebingen.de/archive/openms/Documentation/nightly/html/index.html}). Here we would like to give some examples on how pyopenms can be used for simple scripting task, such as peptide mass calculation and peptide/protein digestion as well as isotope distribution calculation. \\
+A big advantage of pyOpenMS are its scripting capabilities (beyond its application in tool development). Most of the OpenMS datastructure can be accessed using python (\url{https://abibuilder.informatik.uni-tuebingen.de/archive/openms/Documentation/nightly/html/index.html}). Here we would like to give some examples on how pyopenms can be used for simple scripting task, such as peptide mass calculation and peptide/protein digestion as well as isotope distribution calculation. \\
 
 \noindent Calculation of the monoisotopic and average mass of a peptide sequence 
 \begin{lstlisting}
@@ -87,7 +87,7 @@ seq = AASequence.fromString("DFPIANGER")
 mono_mass = seq.getMonoWeight(Residue.ResidueType.Full, 0)
 average_mass = seq.getAverageWeight(Residue.ResidueType.Full, 0)
 
-print("Different masses of the peptide sequence " + seq.toString().decode('utf-8') + " are:")
+print("The masses of the peptide sequence " + seq.toString().decode('utf-8') + " are:")
 print("mono: " + str(mono_mass))
 print("average: "+ str(average_mass))
 \end{lstlisting}
@@ -123,7 +123,7 @@ for iso in isotopes.getContainer():
     print (iso.getMZ(), ":", iso.getIntensity())
 \end{lstlisting}
 
-\noindent For further examples and the OpenMS\/pyOpenMS datastructure please see \url{https://pyopenms.readthedocs.io/en/release_2.4.0/datastructures.html}. 
+\noindent For further examples and the pyOpenMS datastructure please see \url{https://pyopenms.readthedocs.io/en/release_2.4.0/datastructures.html}. 
 
 \subsection{Tool development with pyOpenMS}
 Scripting is one side of pyOpenMS, the other is the ability to create Tools using the C++ OpenMS library in the background.  In the following section we will create a "ProteinDigestor" pyOpenMS Tool. It should be able to read in a fasta file. Digest the proteins with a specific enzyme (e.g. Trypsin) and export an idXML output file.
@@ -140,16 +140,13 @@ optional arguments:
   -in INFILE            An input file containing amino acid sequences [fasta]
   -out OUTFILE          Output digested sequences in idXML format [idXML]
   -enzyme ENZYME        Enzyme used for digestion
-  -min_length MIN_LENGTH
-                        Minimum length of peptide
-  -max_length MAX_LENGTH
-                        Maximum length of peptide
-  -missed_cleavages MISSED_CLEAVAGES
-                        The number of allowed missed cleavages
+  -min_length MIN_LENGTH		Minimum length of peptide
+  -max_length MAX_LENGTH		Maximum length of peptide
+  -missed_cleavages MISSED_CLEAVAGES			The number of allowed missed cleavages
 \end{lstlisting}
 
 \subsubsection{Basics}
-The first task that your tool needs to be able to do is to read the parameters from the command line and provide a main routine. This is all standard Python and no pyOpenMS is needed so far:
+First, your tool needs to be able to read parameters from the command line and provide a main routine. Here standard Python can be used (no pyOpenMS is required so far).
 
 \begin{lstlisting}
 #!/usr/bin/env python
@@ -193,7 +190,7 @@ python ProteinDigestor_argparse.py -in mini_example.fasta -out mini_example_out.
 
 \noindent The parameters are being read from the command line by the function handle\_args() and given to the main() function of the script, which prints the different variables.
 
-\noindent OpenMS has a ProteaseDB which contains certains enzymes which can be used for the digest. You can add this to the argparse code to be able to see the usable enzymes. 
+\noindent OpenMS has a ProteaseDB  class containing a list of enzymes which can be used for digestion of proteins. You can add this to the argparse code to be able to see the usable enzymes. From this point onward pyOpenMS is required. 
 \begin{lstlisting}
     # from here pyopenms is needed
     # get available enzymes from ProteaseDB
@@ -205,12 +202,11 @@ python ProteinDigestor_argparse.py -in mini_example.fasta -out mini_example_out.
 \end{lstlisting}
 
 \subsubsection{Loading data structures with pyOpenMS}
-We already scripted enzymatic digestion with the AASequence and EnzymaticDigest (see above). To make this even easier, we can use a existing class in OpenMS, which is called ProteaseDigestion.
+We already scripted enzymatic digestion with the AASequence and EnzymaticDigest (see above). To make this even easier, we can use an existing class in OpenMS, called ProteaseDigestion.
 
 \begin{lstlisting}
     # Use the ProteaseDigestion class
     # set the enzyme used for digestion and the number of missed cleavages
-    
     digestor = ProteaseDigestion()
     digestor.setEnzyme(options.enzyme)
     digestor.setMissedCleavages(options.missed_cleavages)
@@ -218,11 +214,10 @@ We already scripted enzymatic digestion with the AASequence and EnzymaticDigest 
     # call the ProteaseDigestion::digest function
     # which will return the number of discarded digestions products  
     # and fill the current_digest list with digestes peptide sequences
-    
     digestor.digest(aaseq.fromString(fe.sequence), current_digest, options.min_length, options.max_length)
 \end{lstlisting}
 
-\noindent The next step is to use FASTAFile class to read the input:
+\noindent The next step is to use FASTAFile class to read the fasta input:
 \begin{lstlisting}
     # construct a FASTAFile Object and read the input file
     ff = FASTAFile()
@@ -234,7 +229,6 @@ We already scripted enzymatic digestion with the AASequence and EnzymaticDigest 
     # loop over the entry in the fasta while using while
     while(ff.readNext(fe)): 
 \end{lstlisting}
-
 
 \noindent The output idXML needs the information about protein and peptide level, which can be saved in the ProteinIdentification and PeptideIdentification classes. 
 \begin{lstlisting}
