--- a/Handout/handout.tex
+++ b/Handout/handout.tex
@@ -12,6 +12,9 @@
 \hyphenation{MSConvertGUI}
 \hyphenation{msconvert}
 
+% to comment lager blocks 
+\usepackage{comment}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % We use UBUNTU font for a more professional look.
 % UBUNTU fonts can be downloaded from: http://font.ubuntu.com.
