[FIX] absolute path and further changes

--- a/Handout/openswath.tex
+++ b/Handout/openswath.tex
@@ -23,7 +23,7 @@ Please obtain a version for either Windows, Mac or Linux directly from CRAN. \\
 \subsubsection{Generating TraML from transition lists}
 OpenSWATH requires an assay library to be supplied in the TraML format \cite{Deutsch2012TraMLA}. To enable manual editing of transition lists, the TOPP tool \OPENMSTOOL{TargetedFileConverter} is available, which uses tab separated files as input. Example datasets are provided in \directory{Example\_Data/OpenSWATH/assay/}. Please note that the transition lists need to be named \texttt{.tsv}.
 
-\newline \noindent The header of the transition list contains the following variables (with example values in brackets):
+\noindent The header of the transition list contains the following variables (with example values in brackets):
 
 \begin{description}
   \item[Required Columns:]
@@ -69,29 +69,29 @@ OpenSWATH requires an assay library to be supplied in the TraML format \cite{Deu
 
 \noindent For further instructions about generic transition list and assay library generation please see \url{http://openswath.org/en/latest/docs/generic.html}. \\
 
-\noindent To convert transitions lists to TraML, use the \OPENMSTOOL{TargetedFileConverter}: \\
+\noindent To convert transitions lists to TraML, use the \OPENMSTOOL{TargetedFileConverter}: Please use the absolute path to your OpenMS installation. \\
 
 \begin{description}
   \item[Linux or Mac] \hfill \\
     On the Terminal:
     \begin{lstlisting}
-  TargetedFileConverter -in OpenSWATH_SGS_AssayLibrary_woDecoy.tsv -out OpenSWATH_SGS_AssayLibrary_woDecoy.TraML
+TargetedFileConverter -in OpenSWATH_SGS_AssayLibrary_woDecoy.tsv -out OpenSWATH_SGS_AssayLibrary_woDecoy.TraML
   \end{lstlisting}
   \item[Windows] \hfill \\
     On the TOPP command line:
     \begin{lstlisting}
-  TargetedFileConverter.exe -in OpenSWATH_SGS_AssayLibrary_woDecoy.tsv -out OpenSWATH_SGS_AssayLibrary_woDecoy.TraML
+TargetedFileConverter.exe -in OpenSWATH_SGS_AssayLibrary_woDecoy.tsv -out OpenSWATH_SGS_AssayLibrary_woDecoy.TraML
   \end{lstlisting}
 \end{description}
 
 \subsubsection{Appending decoys to a TraML file}
-In addition to the target assays, OpenSWATH requires decoy assays in the library which are later used for classification and error rate estimation. For the decoy generation it is crucial that the decoys represent the targets in a realistic but unnatural manner without interfering with the targets. The methods for decoy generation implemented in OpenSWATH include 'shuffle', 'pseudo-reverse', 'reverse' and 'shift'. To append decoys to a TraML, the TOPP tool \OPENMSTOOL{OpenSwathDecoyGenerator} can be used:
+In addition to the target assays, OpenSWATH requires decoy assays in the library which are later used for classification and error rate estimation. For the decoy generation it is crucial that the decoys represent the targets in a realistic but unnatural manner without interfering with the targets. The methods for decoy generation implemented in OpenSWATH include 'shuffle', 'pseudo-reverse', 'reverse' and 'shift'. To append decoys to a TraML, the TOPP tool \OPENMSTOOL{OpenSwathDecoyGenerator} can be used: Please use the absolute path to your OpenMS installation.
 
 \begin{description}
   \item[Linux or Mac] \hfill \\
     On the Terminal:
     \begin{lstlisting}
-  OpenSwathDecoyGenerator -in OpenSWATH_SGS_AssayLibrary_woDecoy.TraML -out OpenSWATH_SGS_AssayLibrary.TraML -method shuffle -switchKR false
+OpenSwathDecoyGenerator -in OpenSWATH_SGS_AssayLibrary_woDecoy.TraML -out OpenSWATH_SGS_AssayLibrary.TraML -method shuffle -switchKR false
   \end{lstlisting}
   \item[Windows] \hfill \\
     On the TOPP command line:
@@ -115,7 +115,7 @@ An example KNIME workflow for OpenSWATH is supplied in \directory{Workflows/} (F
   \item Run the workflow.
 \end{enumerate}
 
-\noindent The resulting output can be found at your selected path, which will be used as input for mProphet. Execute the script on the Terminal (Linux or Mac) or cmd.exe (Windows) in \directory{Example\_Data/OpenSWATH/result}:
+\noindent The resulting output can be found at your selected path, which will be used as input for mProphet. Execute the script on the Terminal (Linux or Mac) or cmd.exe (Windows) in \directory{Example\_Data/OpenSWATH/result}. Please use the absolute path to your R installation and the result file:
 
 \begin{lstlisting}
 R --slave --args bin_dir=../../../External_Tools/mProphet/ mquest=OpenSWATH_quant.tsv workflow=LABEL_FREE num_xval=5 run_log=FALSE write_classifier=1 write_all_pg=1 < ../../../External_Tools/mProphet/mProphet.R
@@ -125,6 +125,7 @@ or for windows
 "C:\Program Files\R\R-3.5.1\bin\x86\R.exe" --slave --args bin_dir=../../../External_Tools/mProphet/ mquest=OpenSWATH_quant.tsv workflow=LABEL_FREE num_xval=5 run_log=FALSE write_classifier=1 write_all_pg=1 < ../../../External_Tools/mProphet/mProphet.R
 \end{lstlisting}
 
+% begin comment pyopenms
 \begin{comment}
 \noindent If you have a valid python installation, pyProphet can be used. Further instructions the installation of python can be found in the pyOpenMS section. 
 
@@ -138,7 +139,7 @@ pip install pyprophet
 pyprophet score --in OpenSWATH_quant.tsv --out OpenSWATH_quant_scoring.tsv --group_id transition_group_id --pi0_lambda 1e-6 1e-2 1e-6
 \end{lstlisting}
 \end{comment}
-\newline
+% end comment pyopenms
 
 \noindent The main output will be called\\
 \directory{OpenSWATH/result/mProphet\_all\_peakgroups.xls}\\
